# alpha4

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/alpha4/common/: cli.cpp  cli.hpp  error.hpp  guard.hpp  linescanner.cpp  linescanner.hpp  logger.cpp  logger.hpp  math.hpp  string.hpp
src/alpha4/types/: matrix.cpp  matrix.hpp  token.hpp  util.hpp  vector.cpp  vector.hpp
src/alpha4c/common/: inline.h  linescanner.cpp  linescanner.h  math.h  stringbuilder.cpp  stringbuilder.h
src/alpha4c/types/: vector.h
